--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,5 +4,5 @@
   "tslint.autoFixOnSave": true,
   "eslint.enable": false,
   "eslint.autoFixOnSave": true,
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "typescript", "typescriptreact", "json", "javascriptreact", "typescript.tsx", "css", "Markdown"]
+  "coc.preferences.formatOnSaveFiletypes": ["javascript", "typescript", "typescriptreact", "json", "javascriptreact", "typescript.tsx", "css", "Markdown", "python"]
 }
