Prettier local version

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,8 +1,19 @@
 {
   "prettier.requireConfig": true,
+  "prettier.onlyUseLocalVersion": true,
   "tslint.enable": false,
   "tslint.autoFixOnSave": true,
   "eslint.enable": false,
   "eslint.autoFixOnSave": true,
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "typescript", "typescriptreact", "json", "javascriptreact", "typescript.tsx", "css", "Markdown", "python"]
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "typescript",
+    "typescriptreact",
+    "json",
+    "javascriptreact",
+    "typescript.tsx",
+    "css",
+    "Markdown",
+    "python"
+  ]
 }
